fix text alignment

--- a/src/pages/JobApplyPage.css
+++ b/src/pages/JobApplyPage.css
@@ -36,7 +36,6 @@
 }
 
 .form-data input {
-    text-align: right;
     justify-content: right;
 }
 
